--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -51,6 +51,6 @@
 }
 
 .navbar a.active {
-    color: var(--text);
+    color: var(--primary-500);
     font-weight: 600;
 }
